Working before handler implementation

--- a/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
+++ b/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
@@ -88,6 +88,10 @@
   <ItemGroup>
     <ClCompile Include="..\..\code\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\code\Handler.h" />
+    <ClInclude Include="..\..\code\Scene.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
