--- a/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
+++ b/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
@@ -90,8 +90,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\code\Adapter.h" />
+    <ClInclude Include="..\..\code\Circle.h" />
     <ClInclude Include="..\..\code\Geometry.h" />
     <ClInclude Include="..\..\code\Scene.h" />
+    <ClInclude Include="..\..\code\Segment.h" />
+    <ClInclude Include="..\..\code\Square.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
