--- a/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
+++ b/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
@@ -90,11 +90,13 @@
     <ClCompile Include="..\..\code\Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\code\Basket.h" />
     <ClInclude Include="..\..\code\Circle.h" />
     <ClInclude Include="..\..\code\Geometry.h" />
+    <ClInclude Include="..\..\code\Rectangle_platform.h" />
     <ClInclude Include="..\..\code\Scene.h" />
-    <ClInclude Include="..\..\code\Segment.h" />
-    <ClInclude Include="..\..\code\Square.h" />
+    <ClInclude Include="..\..\code\Borders.h" />
+    <ClInclude Include="..\..\code\Rectangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
