Didnt update fully on the commit

--- a/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
+++ b/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
@@ -89,7 +89,7 @@
     <ClCompile Include="..\..\code\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\code\Handler.h" />
+    <ClInclude Include="..\..\code\Circle.h" />
     <ClInclude Include="..\..\code\Scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
