Patch, can spawn rectangles now

--- a/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj.filters
+++ b/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="..\..\code\Rectangle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\code\ContactListener.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
