--- a/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
+++ b/2D/Practica_animacion/projects/vs-2019/Box2D.vcxproj
@@ -21,13 +21,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -92,6 +92,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\code\Basket.h" />
     <ClInclude Include="..\..\code\Circle.h" />
+    <ClInclude Include="..\..\code\ContactListener.h" />
     <ClInclude Include="..\..\code\Geometry.h" />
     <ClInclude Include="..\..\code\Player.h" />
     <ClInclude Include="..\..\code\PlayerController.h" />
